--- a/CarSharing/Views/Home/Index.cshtml
+++ b/CarSharing/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                 @using (Html.BeginForm("Index", "Search", FormMethod.Get))
                 {
                     <div class="row bg-body-tertiary">
-                        <span class="text-center fw-lighter mt-4 fs-7">Hơn @Model.ListVehicles.Count+ xe đang được cho thuê</span>
+                        <span class="text-center fw-lighter mt-4 fs-7">Hơn @Model.ListVehicles.Count+ xe đang được cho thuê Test thử một xíu thôi</span>
                         <h3 class="text-center fw-bold pt-3 pb-4">Bạn cần thuê xe?</h3>
                         <div class="col-lg-6">
                             <div class="input-group">
